2008-09-20 [colin]	3.5.0cvs115

	* src/common/utils.c
		Fix bug 1723, "Buffer overflow crash caused by 
		preview in 'Date format help' dialog box"
		Also, optimise fast_strftime a bit :)

2008-09-18 [colin]	3.5.0cvs114

	* src/procmime.c
	* src/textview.c
		Check for NULLs before str* functions

2008-09-18 [colin]	3.5.0cvs113

	* src/messageview.c
	* src/procmime.c
	* src/textview.c
		Handle html parts in multipart/related
		Decode ISO-8859-1 as Windows-1252 (the former
		is a subset of the latter) in order to 
		workaround Outlook mails misencoding
	* src/gtk/logwindow.c
	* src/gtk/logwindow.h
		Clear mainwindow's error pixmap when the
		error scrolls out of the log

2008-09-17 [colin]	3.5.0cvs112

	* src/image_viewer.c
		Fix image loading (multiple childs added to 
		scrolledwindow, break of the resize functionality)
	* src/account.c
	* src/prefs_folder_item.c
	* src/prefs_spelling.c
	* src/gtk/gtkaspell.c
		Better fix problems with dictionaries updates

2008-09-17 [colin]	3.5.0cvs111

	* src/common/utils.c
		Fix double-opening (fixes multiple signatures when
		using signify)

2008-09-16 [colin]	3.5.0cvs110

	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_spelling.c
	* src/gtk/gtkaspell.c
		Better stripping of aspell dictionaries names

2008-09-16 [colin]

	* 3.6.0-rc1 released

2008-09-16 [colin]	3.5.0cvs109

	* src/account.c
	* src/inc.c
	* src/mainwindow.c
	* src/prefs_account.h
	* src/prefs_other.c
	* src/send_message.c
	* src/gtk/inputdialog.c
		Don't add a pref to allow remembering passwords
		(Just not checking the checkbox is enough)

2008-09-16 [colin]	3.5.0cvs108

	* configure.ac
		Require libetpan 0.56 as 0.55 is crashy
	* src/messageview.c
		Fix english
	* src/gtk/inputdialog.c
	* src/gtk/inputdialog.h
		Fix warnings

2008-09-16 [wwp]	3.5.0cvs107

	* src/compose.c
		Complete 3.5.0cvs106 by removing a function that got
		moved to account.[ch].

2008-09-16 [wwp]	3.5.0cvs106

	* src/account.c
	* src/account.h
	* src/compose.c